test/vm/errors/compiler/immutable_in_loop.ach
// Compiler error: attempt to mutate immutable variable inside loop
// Expected: error on the assignment inside the while body

let count = 0
while count < 10 {
    count = count + 1
}
